swagger para atualização de status de uma lista
