# src/api/listas.js
@@ -114,6 +114,23 @@ router.put("/:listaId",
     body("status").not().isEmpty().trim().escape(),
 
     async (req, res) => {
+        /*
+            #swagger.tags = ['Listas']
+            #swagger.description = 'Endpoint para atualizar status de uma lista.'
+            #swagger.parameters['AtualizarStatus'] = {
+                in: 'body',
+                description: 'Atualizar status de uma lista!',
+                required: true,
+                type: 'object',
+                schema: { $ref: '#/definitions/AtualizarStatus'}
+            }
+            #swagger.responses[200] = {
+                description: 'Atualizado com sucesso!',
+            }
+            #swagger.responses[400] = {
+                description: 'Desculpe, tivemos um problema com a requisição!'
+            }
+        */
 
         const errors = validationResult(req);
         if (!errors.isEmpty()) {
