# src/swagger_output.json
@@ -193,6 +193,40 @@
           }
         }
       }
+    },
+    "/listas/{listaId}": {
+      "put": {
+        "tags": [
+          "Listas"
+        ],
+        "description": "Endpoint para atualizar status de uma lista.",
+        "parameters": [
+          {
+            "name": "listaId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "AtualizarStatus",
+            "in": "body",
+            "description": "Atualizar status de uma lista!",
+            "required": true,
+            "type": "object",
+            "schema": {
+              "$ref": "#/definitions/AtualizarStatus"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Atualizado com sucesso!"
+          },
+          "400": {
+            "description": "Desculpe, tivemos um problema com a requisição!"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -333,6 +367,15 @@
         "LojaId": {
           "type": "number",
           "example": 2
+        }
+      }
+    },
+    "AtualizarStatus": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "string",
+          "example": "Em andamento"
         }
       }
     }
